# dubu-block

./: .clang-format  .clangd  .gitattributes  .gitignore  README.md  macos.txt  meson.build  notes.md
.github/workflows/: build.yml  clang-format.yml
dubu-block/: meson.build
dubu-block/assets/shaders/: chunk.frag  chunk.vert  triangle.frag  triangle.vert  uv.comp
dubu-block/assets/shaders/debug/: line.frag  line.vert
dubu-block/pch/: pch.h
dubu-block/src/: main.cpp
dubu-block/src/camera/: freefly_camera.hpp
dubu-block/src/game/: atlas.hpp  block.hpp  chunk.cpp  chunk.hpp  chunk_manager.cpp  chunk_manager.hpp  perlin_noise.hpp
dubu-block/src/generator/: curve.hpp  seed.hpp
dubu-block/src/generator/pipeline/: features_structures.hpp  mesh_generation.hpp  pipeline.hpp  stage.hpp  surface_replacement.hpp  terrain_shaping.hpp  water_filling.hpp
dubu-block/src/gl/: debug_drawer.hpp  gif.hpp  mesh.hpp  shader.hpp  shader_program.hpp  texture.hpp
dubu-block/src/imgui/: dock_space.hpp  imgui_curve.cpp  imgui_curve.hpp
dubu-block/src/input/: input.hpp
dubu-block/src/io/: io.cpp  io.hpp
dubu-block/src/linalg/: aabb.hpp  frustum.hpp  plane.hpp  ray.hpp
dubu-block/src/threading/: DoubleBuffer.hpp
dubu-block/src/util/: singleton.hpp  timer.hpp
dubu-event/: meson.build
dubu-event/src/dubu_event/: dubu_event.h
dubu-event/src/dubu_event/event/: EventEmitter.cpp  EventEmitter.h  Token.h
dubu-util/: meson.build
dubu-util/src/dubu_util/: dubu_util.h
dubu-window/: meson.build
dubu-window/src/dubu_window/window/: Events.h
lib/: meson.build
lib/dubu-event/src/dubu_event/event/: EventEmitter.cpp  EventEmitter.h  EventSubscriber.h
lib/dubu-log/: meson.build
lib/dubu-log/pch/: pch.h
lib/dubu-log/src/dubu_log/: dubu_log.h
lib/dubu-log/src/dubu_log/logger/: ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  ILogger.h  Logger.cpp  Logger.h  format.hpp
lib/dubu-opengl-app/: meson.build
lib/dubu-opengl-app/pch/: pch.h
lib/dubu-opengl-app/src/dubu_opengl_app/: AppBase.cpp  AppBase.hpp  dubu_opengl_app.hpp
lib/dubu-rect-pack/: meson.build
lib/dubu-rect-pack/pch/: pch.h
lib/dubu-rect-pack/src/dubu_rect_pack/: dubu_rect_pack.hpp
lib/dubu-rect-pack/src/dubu_rect_pack/packer/: Packer.cpp  Packer.hpp  Space.cpp  Space.hpp  Types.hpp
lib/dubu-util/src/dubu_util/type/: TypeId.cpp  TypeId.h
lib/dubu-window/: meson.build
lib/dubu-window/pch/: pch.h
lib/dubu-window/src/dubu_window/: dubu_window.h
lib/dubu-window/src/dubu_window/window/: Definitions.h  GLFWWindow.cpp  GLFWWindow.h  IWindow.cpp  IWindow.h
lib/glad/: meson.build
lib/stb/: meson.build
lib/stb/src/stb/: stb_image.h
subprojects/: fast_noise_lite.wrap  imgui_docking.wrap
subprojects/glad/: meson.build
subprojects/glad/include/glad/: glad.h
subprojects/glad/src/: glad.c
subprojects/packagefiles/fast_noise_lite/: meson.build
subprojects/packagefiles/imgui_docking/: meson.build  meson_options.txt
subprojects/stb/: meson.build
